--- a/NetworkApp/NetworkApp.csproj
+++ b/NetworkApp/NetworkApp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="HandleClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
     <Compile Include="ServerForm.cs">
       <SubType>Form</SubType>
     </Compile>
